--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800&display=swap");
 
 
-body {
+body, ul {
   margin: 0;
   padding: 0;
 }
@@ -26,4 +26,26 @@ body {
 /* .css-13lryao-MuiButtonBase-root-MuiListItemButton-root:hover {
   background-color: "primary" !important;
 } */
+
+
+nav {
+  width: 100%;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 10px;
+}
+nav ul {
+  display: flex;
+  list-style: none;
+  padding: 20px;
+}
+nav ul li {
+  padding-right: 30px;
+}
+nav ul li a {
+  text-decoration: none;
+}
+.active {
+  color: #FF5733;
+}
 
